Goto sleep, pop up, read and go back to sleep

--- a/platformio.ini
+++ b/platformio.ini
@@ -9,15 +9,8 @@ board = featheresp32
 platform = espressif32
 framework = arduino
 lib_deps =
-    13
-    22
-    377
     ArduinoJson
     MQTT
-
-; lib_deps #ID numbers explained:
-;  #ID:  13 Adafruit GFX Library
-;  #ID:  22 Adafruit HX8357 3.5" display library
-;  #ID: 377 Adafruit STMPE610
+    I2CSoilMoistureSensor
 
 ;    WiFi  /c/Users/vegar.westerlund/.platformio/packages/framework-arduinoespressif32/libraries/WiFi/src/WiFiSTA.cpp
