Support more than one board

--- a/platformio.ini
+++ b/platformio.ini
@@ -4,13 +4,22 @@
 [platformio]
 default_envs = featheresp32
 
-[env:featheresp32]
-board = featheresp32
-platform = espressif32
-framework = arduino
-lib_deps =
+[common_env_data]
+lib_deps_external =
     ArduinoJson
     MQTT
     I2CSoilMoistureSensor
+
+[env:nodemcu-32s]
+platform = espressif32
+board = nodemcu-32s
+framework = arduino
+lib_deps = ${common_env_data.lib_deps_external}
+
+[env:featheresp32]
+platform = espressif32
+board = featheresp32
+framework = arduino
+lib_deps = ${common_env_data.lib_deps_external}
 
 ;    WiFi  /c/Users/vegar.westerlund/.platformio/packages/framework-arduinoespressif32/libraries/WiFi/src/WiFiSTA.cpp
