--- a/platformio.ini
+++ b/platformio.ini
@@ -2,14 +2,21 @@
 ;   platformio run --target upload --upload-port com8
 
 [platformio]
-default_envs = featheresp32
+default_envs = ezSBC-ESP32-01
 src_dir = ChirpAways
 
 [common_env_data]
 lib_deps_external =
-    ArduinoJson
     MQTT
     I2CSoilMoistureSensor
+
+[env:ezSBC-ESP32-01]
+; Used for
+platform = espressif32
+board = esp32thing
+framework = arduino
+lib_deps = ${common_env_data.lib_deps_external}
+board_build.f_cpu = 80000000L
 
 [env:nodemcu-32s]
 platform = espressif32
