--- a/platformio.ini
+++ b/platformio.ini
@@ -11,12 +11,12 @@ lib_deps_external =
     I2CSoilMoistureSensor
 
 [env:ezSBC-ESP32-01]
-; Used for
 platform = espressif32
 board = esp32thing
 framework = arduino
 lib_deps = ${common_env_data.lib_deps_external}
 board_build.f_cpu = 80000000L
+build_flags = -DESP32_THING=1
 
 [env:nodemcu-32s]
 platform = espressif32
