Support EzSBC with BME240 sensor as well as the chirp sensor

--- a/platformio.ini
+++ b/platformio.ini
@@ -8,13 +8,14 @@ src_dir = ChirpAways
 [common_env_data]
 lib_deps_external =
     MQTT
-    I2CSoilMoistureSensor
 
 [env:ezSBC-ESP32-01]
 platform = espressif32
 board = esp32thing
 framework = arduino
 lib_deps = ${common_env_data.lib_deps_external}
+    "Adafruit BME280 Library@~2.0.1"
+    "Adafruit Unified Sensor@~1.1.2"
 board_build.f_cpu = 80000000L
 build_flags = -DESP32_THING=1
 
@@ -29,5 +30,6 @@ platform = espressif32
 board = featheresp32
 framework = arduino
 lib_deps = ${common_env_data.lib_deps_external}
+    I2CSoilMoistureSensor
 
 ;    WiFi  /c/Users/vegar.westerlund/.platformio/packages/framework-arduinoespressif32/libraries/WiFi/src/WiFiSTA.cpp
