--- a/platformio.ini
+++ b/platformio.ini
@@ -31,5 +31,7 @@ board = featheresp32
 framework = arduino
 lib_deps = ${common_env_data.lib_deps_external}
     I2CSoilMoistureSensor
+board_build.f_cpu = 80000000L
+build_flags = -DFEATHER_ESP32=1
 
 ;    WiFi  /c/Users/vegar.westerlund/.platformio/packages/framework-arduinoespressif32/libraries/WiFi/src/WiFiSTA.cpp
