--- a/platformio.ini
+++ b/platformio.ini
@@ -2,36 +2,50 @@
 ;   platformio run --target upload --upload-port com8
 
 [platformio]
-default_envs = ezSBC-ESP32-01
+default_envs = chirp
 src_dir = ChirpAways
 
 [common_env_data]
 lib_deps_external =
     MQTT
 
-[env:ezSBC-ESP32-01]
+[env:chirp]
+; Is a ezSBC ESP32-01 board
 platform = espressif32
 board = esp32thing
 framework = arduino
 lib_deps = ${common_env_data.lib_deps_external}
-    "Adafruit BME280 Library@~2.0.1"
-    "Adafruit Unified Sensor@~1.1.2"
+;    I2CSoilMoistureSensor
 board_build.f_cpu = 80000000L
-build_flags = -DESP32_THING=1
+build_flags = -DESP32_THING=1 -DCHIRP_SENSOR=1 -DBATT_VOLT_DIV
 
-[env:nodemcu-32s]
+[env:bme280]
+; Is a ezSBC ESP32-01 board
 platform = espressif32
-board = nodemcu-32s
+board = esp32thing
 framework = arduino
 lib_deps = ${common_env_data.lib_deps_external}
-
-[env:featheresp32]
-platform = espressif32
-board = featheresp32
-framework = arduino
-lib_deps = ${common_env_data.lib_deps_external}
-    I2CSoilMoistureSensor
+    31@1.1.2
+    166@2.0.2
+;  31 ==    "Adafruit Unified Sensor@~1.1.2"
+; 166 ==    "Adafruit BME280 Library@~2.0.1"
 board_build.f_cpu = 80000000L
-build_flags = -DFEATHER_ESP32=1
+build_flags = -DESP32_THING=1 -DBME280_SENSOR=1 -DBATT_PROTECTION=1500 -DBATT_VOLT_DIV
+; 1405 * 2 * 3.3 / 4095) + 0.910 ~= 3.174V
+
+;[env:nodemcu-32s]
+;platform = espressif32
+;board = nodemcu-32s
+;framework = arduino
+;lib_deps = ${common_env_data.lib_deps_external}
+;
+;[env:featheresp32]
+;platform = espressif32
+;board = featheresp32
+;framework = arduino
+;lib_deps = ${common_env_data.lib_deps_external}
+;board_build.f_cpu = 80000000L
+;build_flags = -DFEATHER_ESP32=1 -DBATT_PROTECTION=2040 -DBATT_VOLT_DIV
+; (2040 * 2 * 3.3 / 4095) + 0.366 ~= 3.65V
 
 ;    WiFi  /c/Users/vegar.westerlund/.platformio/packages/framework-arduinoespressif32/libraries/WiFi/src/WiFiSTA.cpp
