--- a/platformio.ini
+++ b/platformio.ini
@@ -27,18 +27,12 @@ framework = arduino
 lib_deps = ${common_env_data.lib_deps_external}
     31@1.1.2
     166@2.0.2
-;  31 ==    "Adafruit Unified Sensor@~1.1.2"
-; 166 ==    "Adafruit BME280 Library@~2.0.1"
+;  31 == Adafruit Unified Sensor
+; 166 == Adafruit BME280 Library
 board_build.f_cpu = 80000000L
 build_flags = -DESP32_THING=1 -DBME280_SENSOR=1 -DBATT_PROTECTION=1500 -DBATT_VOLT_DIV
 ; 1405 * 2 * 3.3 / 4095) + 0.910 ~= 3.174V
 
-;[env:nodemcu-32s]
-;platform = espressif32
-;board = nodemcu-32s
-;framework = arduino
-;lib_deps = ${common_env_data.lib_deps_external}
-;
 ;[env:featheresp32]
 ;platform = espressif32
 ;board = featheresp32
@@ -47,5 +41,3 @@ build_flags = -DESP32_THING=1 -DBME280_SENSOR=1 -DBATT_PROTECTION=1500 -DBATT_VO
 ;board_build.f_cpu = 80000000L
 ;build_flags = -DFEATHER_ESP32=1 -DBATT_PROTECTION=2040 -DBATT_VOLT_DIV
 ; (2040 * 2 * 3.3 / 4095) + 0.366 ~= 3.65V
-
-;    WiFi  /c/Users/vegar.westerlund/.platformio/packages/framework-arduinoespressif32/libraries/WiFi/src/WiFiSTA.cpp
