Invalided stored wifi settings if connection fails

--- a/platformio.ini
+++ b/platformio.ini
@@ -1,5 +1,6 @@
 ; To run
 ;   platformio run --target upload --upload-port com8
+;   platformio run --target upload --upload-port com10 --environment bme280
 
 [platformio]
 default_envs = chirp
