Added support for DHT22 sensor

--- a/platformio.ini
+++ b/platformio.ini
@@ -34,6 +34,17 @@ board_build.f_cpu = 80000000L
 build_flags = -DESP32_THING=1 -DBME280_SENSOR=1 -DBATT_PROTECTION=1500 -DBATT_VOLT_DIV
 ; 1405 * 2 * 3.3 / 4095) + 0.910 ~= 3.174V
 
+[env:dht22]
+; Is a ezSBC ESP32-01 board
+platform = espressif32
+board = esp32thing
+framework = arduino
+lib_deps = ${common_env_data.lib_deps_external}
+    19@1.1.4
+;  19 == DHT sensor library
+board_build.f_cpu = 80000000L
+build_flags = -DESP32_THING=1 -DDHT22_SENSOR=1 -DBATT_PROTECTION=1500 -DBATT_VOLT_DIV
+
 ;[env:featheresp32]
 ;platform = espressif32
 ;board = featheresp32
