Start on ESP_NOW variant of sensor platform

--- a/platformio.ini
+++ b/platformio.ini
@@ -3,53 +3,21 @@
 ;   platformio run --target upload --upload-port com10 --environment bme280
 
 [platformio]
-default_envs = chirp
-src_dir = ChirpAways
-
-[common_env_data]
-lib_deps_external =
-    MQTT
-
-[env:chirp]
-; Is a ezSBC ESP32-01 board
-platform = espressif32
-board = esp32thing
-framework = arduino
-lib_deps = ${common_env_data.lib_deps_external}
-;    I2CSoilMoistureSensor
-board_build.f_cpu = 80000000L
-build_flags = -DESP32_THING=1 -DCHIRP_SENSOR=1 -DBATT_VOLT_DIV
-
-[env:bme280]
-; Is a ezSBC ESP32-01 board
-platform = espressif32
-board = esp32thing
-framework = arduino
-lib_deps = ${common_env_data.lib_deps_external}
-    31@1.1.2
-    166@2.0.2
-;  31 == Adafruit Unified Sensor
-; 166 == Adafruit BME280 Library
-board_build.f_cpu = 80000000L
-build_flags = -DESP32_THING=1 -DBME280_SENSOR=1 -DBATT_PROTECTION=1500 -DBATT_VOLT_DIV
-; 1405 * 2 * 3.3 / 4095) + 0.910 ~= 3.174V
+default_envs = dht22
 
 [env:dht22]
 ; Is a ezSBC ESP32-01 board
 platform = espressif32
 board = esp32thing
 framework = arduino
-lib_deps = ${common_env_data.lib_deps_external}
+lib_deps =
     19@1.1.4
+;   31@1.1.2
+;   166@2.0.2
 ;  19 == DHT sensor library
+;  31 == Adafruit Unified Sensor
+; 166 == Adafruit BME280 Library
 board_build.f_cpu = 80000000L
 build_flags = -DESP32_THING=1 -DDHT22_SENSOR=1 -DBATT_PROTECTION=1500 -DBATT_VOLT_DIV
-
-;[env:featheresp32]
-;platform = espressif32
-;board = featheresp32
-;framework = arduino
-;lib_deps = ${common_env_data.lib_deps_external}
-;board_build.f_cpu = 80000000L
-;build_flags = -DFEATHER_ESP32=1 -DBATT_PROTECTION=2040 -DBATT_VOLT_DIV
-; (2040 * 2 * 3.3 / 4095) + 0.366 ~= 3.65V
+; -DBME280_SENSOR=1
+; 1405 * 2 * 3.3 / 4095) + 0.910 ~= 3.174V
