Cleaning out MQTT and Wifi connect

--- a/platformio.ini
+++ b/platformio.ini
@@ -1,6 +1,6 @@
 ; To run
 ;   platformio run --target upload --upload-port com8
-;   platformio run --target upload --upload-port com10 --environment bme280
+;   platformio run --target upload --upload-port com12 --environment feather_simulator
 
 [platformio]
 default_envs = dht22
@@ -21,3 +21,9 @@ board_build.f_cpu = 80000000L
 build_flags = -DESP32_THING=1 -DDHT22_SENSOR=1 -DBATT_PROTECTION=1500 -DBATT_VOLT_DIV
 ; -DBME280_SENSOR=1
 ; 1405 * 2 * 3.3 / 4095) + 0.910 ~= 3.174V
+
+[env:feather_simulator]
+; Is a Feather without sensor or voltage divider or anything...
+platform = espressif32
+board = featheresp32
+framework = arduino
