Add esp now sending

--- a/platformio.ini
+++ b/platformio.ini
@@ -27,3 +27,4 @@ build_flags = -DESP32_THING=1 -DDHT22_SENSOR=1 -DBATT_PROTECTION=1500 -DBATT_VOL
 platform = espressif32
 board = featheresp32
 framework = arduino
+build_flags = -DSIMULATOR=1
