Now we are close...

--- a/platformio.ini
+++ b/platformio.ini
@@ -1,6 +1,8 @@
 ; To run
 ;   platformio run --target upload --upload-port com8
 ;   platformio run --target upload --upload-port com12 --environment feather_simulator
+;
+; Consider setCpuFrequencyMhz(80); instead of board_build.f_cpu = 80000000L
 
 [platformio]
 default_envs = dht22
@@ -11,7 +13,7 @@ platform = espressif32
 board = esp32thing
 framework = arduino
 lib_deps =
-    19@1.1.4
+    19
 ;   31@1.1.2
 ;   166@2.0.2
 ;  19 == DHT sensor library
@@ -27,4 +29,7 @@ build_flags = -DESP32_THING=1 -DDHT22_SENSOR=1 -DBATT_PROTECTION=1500 -DBATT_VOL
 platform = espressif32
 board = featheresp32
 framework = arduino
-build_flags = -DSIMULATOR=1
+lib_deps =
+    19
+;  19 == DHT sensor library, e.g.:  @1.4.3
+build_flags = -DSIMULATOR=1 -DDHT22_SENSOR=1 -DBATT_PROTECTION=1500 -DBATT_VOLT_DIV
