Add support for ezSBC ESP32 Feather

--- a/platformio.ini
+++ b/platformio.ini
@@ -24,12 +24,18 @@ build_flags = -DESP32_THING=1 -DDHT22_SENSOR=1 -DBATT_PROTECTION=1500 -DBATT_VOL
 ; -DBME280_SENSOR=1
 ; 1405 * 2 * 3.3 / 4095) + 0.910 ~= 3.174V
 
+[env:feather_ezsbc]
+; Is a ezSBC ESP32 Feather
+platform = espressif32
+board = featheresp32
+framework = arduino
+lib_deps = 19
+build_flags = -DFEATHER_EZSBC -DDHT22_SENSOR=1 -DBATT_PROTECTION=1500 -DBATT_VOLT_DIV
+
 [env:feather_simulator]
 ; Is a Feather without sensor or voltage divider or anything...
 platform = espressif32
 board = featheresp32
 framework = arduino
-lib_deps =
-    19
-;  19 == DHT sensor library, e.g.:  @1.4.3
-build_flags = -DSIMULATOR=1 -DDHT22_SENSOR=1 -DBATT_PROTECTION=1500 -DBATT_VOLT_DIV
+lib_deps = 19
+build_flags = -DSIMULATOR
